updating pages content

--- a/index.html
+++ b/index.html
@@ -9,5 +9,39 @@
   <meta name="viewport" content="width=device-width" />
   <title>Project Jasper</title>
 
+  <link rel="stylesheet" href="http://css.cdn.tl/normalize.css" />
+  <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" />
+
 <body>
+  <div id="wrap">
+    <div class="container">
+
+      <div class="hero-unit">
+        <h1><a href="http://github.com/kalisjoshua/Jasper">Jasper</a></h1>
+        <p>JavaScript, Assessment of Skills with Peer Evaluation and Review</p>
+      </div>
+
+      <div class="row">
+        <div class="span8 offset2">
+          <h2>The Problem</h2>
+          <p>I think interviews for front-end developers are broken. Questions are asked and then stories are told. If those stories are true or accurate is completely up to the interpretation of the interviewers. Wouldn't it be better to simply work with the candidate for a while and get real experience with that person to judge by?</p>
+
+          <h2>This Solution</h2>
+          <p>Jasper attempts to fix the above problem by providing a tool for use in various ways. One way to user Jasper is to include it on a website for discovery by developers in the community. People like to find things and most people like a challenge; developers especially will rise to a challenge to prove their skill. Another way to use Jasper is to include it in an interview where a candidate and another person, or two, can work through the challenges presented. By doing "real" work with someone, a better feel for how working with them would actually be once they are hired.</p>
+
+          <h2>Give It A Try</h2>
+          <p>Open up the browser's console and work through the challenges.</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="navbar navbar-fixed-bottom">
+    <div class="container">
+      <div class="pull-right">
+        <p class="muted">Created by <a href="http://github.com/kalisjoshua">Joshua T. Kalis</a></p>
+      </div>
+    </div>
+  </div>
   <script src="./jasper.js"></script>
