add links to reddit comments

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
           <h2>Give It A Try</h2>
           <p>Open up the browser's console and work through the challenges.</p>
+          <p>Then <a href="http://redd.it/1hdvic">talk about it</a> and give me suggestions or submit a <a href="https://github.com/kalisjoshua/Jasper">pull request</a>.</p>
         </div>
       </div>
 
