new file structure to keep asks out of core file

--- a/index.html
+++ b/index.html
@@ -45,4 +45,5 @@
       </div>
     </div>
   </div>
-  <script src="./jasper.js"></script>
+  <script src="./jasper.engine.js"></script>
+  <script src="./jasper.asks.js"></script>
