updating the demo page

--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
           <h2>Give It A Try</h2>
           <p>Open up the browser's console and work through the challenges.</p>
           <p>Then <a href="http://redd.it/1hdvic">talk about it</a> and give me suggestions or submit a <a href="https://github.com/kalisjoshua/Jasper">pull request</a>.</p>
+
+          <h3>The Levels <small>(So Far)</small></h3>
+          <ol>
+            <li>Open the browser's JavaScript console.</li>
+            <li>Call `Jasper` function with a string argument.</li>
+            <li>Functions as a arguments.</li>
+            <li>Throwing `Errors`.</li>
+            <li>Object literals.</li>
+            <li>JSON string creation.</li>
+            <li>Function's arguments object handling.</li>
+            <li>Write a closure.</li>
+            <li>Execution context (this) of a function.</li>
+            <li>Augmenting the prototype of an object.</li>
+          </ol>
         </div>
       </div>
 
