move content from the readme to the html doc

--- a/index.html
+++ b/index.html
@@ -22,30 +22,66 @@
       </div>
 
       <div class="row">
-        <div class="span8 offset2">
-          <h2>The Problem</h2>
-          <p>I think interviews for front-end developers are broken. Questions are asked and then stories are told. If those stories are true or accurate is completely up to the interpretation of the interviewers. Wouldn't it be better to simply work with the candidate for a while and get real experience with that person to judge by?</p>
+        <div class="span8">
+          <p>Jasper provides an API, and engine, to cycle through challenges that will hopefully help identify areas of knowledge or learning opportunities in the user. The challenges are designed to increase in difficulty (or obscurity) as you answer more.</p>
 
-          <h2>This Solution</h2>
-          <p>Jasper attempts to fix the above problem by providing a tool for use in various ways. One way to user Jasper is to include it on a website for discovery by developers in the community. People like to find things and most people like a challenge; developers especially will rise to a challenge to prove their skill. Another way to use Jasper is to include it in an interview where a candidate and another person, or two, can work through the challenges presented. By doing "real" work with someone, a better feel for how working with them would actually be once they are hired.</p>
+          <div class="row">
+            <div class="span3">
+              <h3>The Problem</h3>
+              <p>I think interviews for front-end developers are broken. Questions are asked and stories are told; the truthy-ness of those stories is completely up to the interpretation of the interviewers. Wouldn't it be better to simply work with the candidate for a while and get real experience with that person?</p>
+            </div>
 
-          <h2>Give It A Try</h2>
-          <p>Open up the browser's console and work through the challenges.</p>
-          <p>Then <a href="http://redd.it/1hdvic">talk about it</a> and give me suggestions or submit a <a href="https://github.com/kalisjoshua/Jasper">pull request</a>.</p>
+            <div class="span5">
+              <h3>This Solution</h3>
+              <p>Jasper attempts to fix the above problem by providing a tool for use in various ways. One way to user Jasper is to include it on a website as an easter-egg to be found by developers. People like to find things and most people like a challenge; developers especially will rise to a challenge to prove their skill. Another way to use Jasper is to include it in an interview where a candidate and another person - or two - can work through the challenges presented. By doing "real" work with someone, a better feel for how working with them might actually be once they are hired.</p>
+            </div>
+          </div>
 
-          <h3>The Levels <small>(So Far)</small></h3>
-          <ol>
-            <li>Open the browser's JavaScript console.</li>
-            <li>Call `Jasper` function with a string argument.</li>
-            <li>Functions as a arguments.</li>
-            <li>Throwing `Errors`.</li>
-            <li>Object literals.</li>
-            <li>JSON string creation.</li>
-            <li>Function's arguments object handling.</li>
-            <li>Write a closure.</li>
-            <li>Execution context (this) of a function.</li>
-            <li>Augmenting the prototype of an object.</li>
-          </ol>
+          <h3>Hopes And Dreams</h3>
+          <div class="pull-right span3 well">
+            <p>I don't like most interview questions.</p>
+            <ul>
+              <li>What is your biggest weakness?</li>
+              <li>Why are manhole covers round?</li>
+              <li>Talk about a time when you failed.</li>
+            </ul>
+          </div>
+
+          <p>I think interviews should involve some typical every-day stuff. I think that this would help the candidate relax a little since it should be an activity they are completely comfortable participating in.</p>
+
+          <ul>
+            <li>Code review of some of the candidates' own code</li>
+            <li>Whiteboard some problems (possibly current real problems the company is having)</li>
+            <li>Writing some code</li>
+          </ul>
+
+          <p>To that end, I hope that this library can evolve into a tool that will help us break out of some of that wasted time in an interview. Besides, a lot of questions can be answered indirectly through just working with them rather than them telling a story about their perception of a past event.</p>
+        </div>
+
+        <div class="span4">
+          <div class="alert alert-block alert-success">
+            <h4>Levels Ask For</h4>
+            <ol>
+              <li>Open the browser's JavaScript console.</li>
+              <li>Call `Jasper` function with a string argument.</li>
+              <li>Functions as a arguments.</li>
+              <li>Throwing `Errors`.</li>
+              <li>Object literals.</li>
+              <li>JSON string creation.</li>
+              <li>Function's arguments object handling.</li>
+              <li>Write a closure.</li>
+              <li>Execution context (this) of a function.</li>
+              <li>Augmenting the prototype of an object.</li>
+            </ol>
+          </div>
+
+          <div class="alert alert-info">
+            <h5>Help Out!</h5>
+            <p>Talk about #Jasper by <a href="http://redd.it/1hdvic">making a suggestion</a>, submit a <a href="https://github.com/kalisjoshua/Jasper">pull request</a>, or <a href=""https://github.com/kalisjoshua/Jasper/issues?state=open>file an issue</a>.</p>
+          </div>
+
+          <h4>The Name Jasper</h4>
+          <p>The name comes from, JavaScript Activity, Skills Peer Evaluation and Review. It's a stretch I know but the name "Jasper" is what first came to mind and then I tried to create an accronym after-the-fact so leave me alone. If you don't like it, suggest something better.</p>
         </div>
       </div>
 
