--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li>Why are manhole covers round?</li>
                 <li>Talk about a time when you failed.</li>
               </ul>
-              
+
               <p>I think interviews for front-end developers are broken. Questions are asked and stories are told; the truthy-ness of those stories is completely up to the interpretation of the interviewers. Wouldn't it be better to simply work with the candidate for a while and get real experience with that person?</p>
             </div>
 
@@ -58,8 +58,8 @@
         </div>
 
         <div class="span4">
-          <div class="alert alert-block alert-success">
-            <h4>Levels Ask For</h4>
+          <div class="alert alert-success">
+            <h5>Levels Ask For</h5>
             <ol>
               <li>Open the browser's JavaScript console.</li>
               <li>Call `Jasper` function with a string argument.</li>
