moar links to contribute.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,13 @@
 
           <div class="alert alert-info">
             <h5>Help Out!</h5>
-            <p>Talk about #Jasper by <a href="http://redd.it/1hdvic">making a suggestion</a>, submit a <a href="https://github.com/kalisjoshua/Jasper">pull request</a>, or <a href=""https://github.com/kalisjoshua/Jasper/issues?state=open>file an issue</a>.</p>
+            <p>Talk about #Jasper, making a suggestion:</p>
+            <ul>
+              <li><a href="http://redd.it/1hdvic">on reddit</a></li>
+              <li><a href="https://news.ycombinator.com/item?id=5986123">on hacker news</a></li>
+              <li><a href="https://github.com/kalisjoshua/Jasper">submit a pull request</a></li>
+              <li><a href="https://github.com/kalisjoshua/Jasper/issues?state=open">file an issue</a></li>
+            </ul>
           </div>
 
           <h4>The Name Jasper</h4>
