--- a/index.html
+++ b/index.html
@@ -59,18 +59,18 @@
 
         <div class="span4">
           <div class="alert alert-success">
-            <h5>Levels Ask For</h5>
+            <h5>Jasper Level Hints</h5>
             <ol>
-              <li>Open the browser's JavaScript console.</li>
-              <li>Call `Jasper` function with a string argument.</li>
-              <li>Functions as a arguments.</li>
-              <li>Throwing `Errors`.</li>
-              <li>Object literals.</li>
-              <li>JSON string creation.</li>
-              <li>Function's arguments object handling.</li>
-              <li>Write a closure.</li>
-              <li>Execution context (this) of a function.</li>
-              <li>Augmenting the prototype of an object.</li>
+              <li>Open the browser's JavaScript console</li>
+              <li>Call `Jasper` function with a string argument</li>
+              <li>Functions as a arguments</li>
+              <li>Throw an Error</li>
+              <li>Object literals</li>
+              <li>JSON string</li>
+              <li>Function's `arguments` object handling</li>
+              <li>Write a closure</li>
+              <li>Execution context (this) of a function</li>
+              <li>Augmenting the prototype of an object</li>
             </ol>
           </div>
 
