Update the copy in the green box on the index page to make the list more clear.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 
         <div class="span4">
           <div class="alert alert-success">
-            <h5>Jasper Level Hints</h5>
+            <h5>Jasper Levels:</h5>
+            <p>Objective of each level in Jasper.</p>
             <ol>
               <li>Open the browser's JavaScript console</li>
               <li>Call `Jasper` function with a string argument</li>
