add git contributors

--- a/index.html
+++ b/index.html
@@ -91,15 +91,27 @@
         </div>
       </div>
 
-    </div>
-  </div>
+      <div class="row">
+        <div class="container">
+          <div class="offset2 span8 text-center well well-small">
+            <h5>Thank you to...</h5>
+            <p><a href="https://github.com/calvinbushor">Calvin Bushor</a>, <a href="https://github.com/camilleriluke">Luke Camilleri</a>, and <a href="https://github.com/Vp3n">Vivian Pennel</a></p>
+            <p>... for your contributions so far. I am looking forward to where this project takes us.</p>
+          </div>
+        </div>
+      </div>
 
-  <div class="navbar navbar-fixed-bottom">
-    <div class="container">
-      <div class="pull-right">
-        <p class="muted">Created by <a href="http://github.com/kalisjoshua">Joshua T. Kalis</a></p>
+      <div class="navbar navbar-static-top">
+        <div class="navbar-inner">
+          <div class="pull-right">
+            <div class="brand">
+              Created by <a href="http://github.com/kalisjoshua">Joshua T. Kalis</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+
   <script src="./jasper.engine.js"></script>
   <script src="./jasper.asks.js"></script>
