add devtroit and travisci badges

--- a/index.html
+++ b/index.html
@@ -91,18 +91,28 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="container">
-          <div class="offset2 span8 text-center well well-small">
+      <div class="row text-center">
+        <div class="span8">
+          <div class="well">
             <h5>Thank you to...</h5>
             <p><a href="https://github.com/calvinbushor">Calvin Bushor</a>, <a href="https://github.com/camilleriluke">Luke Camilleri</a>, and <a href="https://github.com/Vp3n">Vivian Pennel</a></p>
             <p>... for your contributions so far. I am looking forward to where this project takes us.</p>
           </div>
         </div>
+
+        <div class="span4">
+          <a href="http://devtroit.com/img/badges/badge-medium.png">
+            Developed in <br />
+            <img src="http://devtroit.com/img/badges/badge-medium.png" alt="Medium Badge"></a>
+        </div>
       </div>
 
       <div class="navbar navbar-static-top">
         <div class="navbar-inner">
+          <div class="brand">
+            <a href="https://travis-ci.org/kalisjoshua/Jasper">
+              <img src="https://travis-ci.org/kalisjoshua/Jasper.png?branch=master" alt="Build Status" style="max-width:100%;"></a>
+          </div>
           <div class="pull-right">
             <div class="brand">
               Created by <a href="http://github.com/kalisjoshua">Joshua T. Kalis</a>
