gittip badge, not sure if this will be a keeper

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       <div class="row">
         <div class="span8">
           <p>Jasper provides an API, and engine, to cycle through challenges that will hopefully help identify areas of knowledge or learning opportunities in the user. The challenges are designed to increase in difficulty (or obscurity) as you answer more.</p>
+          <div class="text-right">
+            <iframe style="border: 0; margin: 0; padding: 0;" src="https://www.gittip.com/kalisjoshua/widget.html" width="48pt" height="22pt"></iframe>
+          </div>
 
           <div class="row">
             <div class="span3">
