--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html class="no-js">
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width" />
   <title>Project Jasper</title>
 
-  <link rel="stylesheet" href="http://css.cdn.tl/normalize.css" />
-  <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
+  <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" />
 
 <body>
   <div id="wrap">
@@ -123,5 +120,16 @@
     </div>
   </div>
 
-  <script src="./jasper.engine.js"></script>
-  <script src="./jasper.asks.js"></script>
+  <script type="module">
+    import { Jasper } from "./jasper.engine.js"
+    import { init } from "./jasper.asks.js"
+
+    init(Jasper)
+
+    window.Jasper = Jasper
+
+    console.log(
+      "Level 0: Completed by opening your browser's console.\n" +
+        "'Jasper' is waiting for 'start'. GL! HF!",
+    )
+  </script>
