remove github actions workflows

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width" />
   <title>Project Jasper</title>
 
+  <link href="/favicon.ico" rel="icon" />
+  <link href="/jk-logo.svg" rel="icon" type="image/svg+xml" />
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" />
 
@@ -107,8 +110,6 @@
       <div class="navbar navbar-static-top">
         <div class="navbar-inner">
           <div class="brand">
-            <a href="https://travis-ci.org/kalisjoshua/Jasper">
-              <img src="https://travis-ci.org/kalisjoshua/Jasper.png?branch=master" alt="Build Status" style="max-width:100%;"></a>
           </div>
           <div class="pull-right">
             <div class="brand">
