--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width" />
   <title>Project Jasper</title>
 
-  <link href="/favicon.ico" rel="icon" />
-  <link href="/jk-logo.svg" rel="icon" type="image/svg+xml" />
+  <link href="/Jasper/jk-logo.svg" rel="icon" type="image/svg+xml" />
+  <link href="/Jasper/favicon.ico" rel="icon" />
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" />
@@ -101,9 +101,9 @@
         </div>
 
         <div class="span4">
-          <a href="http://devtroit.com/img/badges/badge-medium.png">
+          <a href="http://devtroit.com/">
             Developed in <br />
-            <img src="http://devtroit.com/img/badges/badge-medium.png" alt="Medium Badge"></a>
+            <img src="devtroit.png" alt="Medium Badge"></a>
         </div>
       </div>
 
