--- a/index.html
+++ b/index.html
@@ -63,15 +63,16 @@
             <p>Objective of each level in Jasper.</p>
             <ol>
               <li>Open the browser's JavaScript console</li>
-              <li>Call `Jasper` function with a string argument</li>
+              <li>Call `Jasper` function with a string argument to "start"</li>
               <li>Functions as a arguments</li>
-              <li>Throw an Error</li>
               <li>Object literals</li>
+              <li>Throw an Error</li>
               <li>JSON string</li>
               <li>Function's `arguments` object handling</li>
               <li>Write a closure</li>
               <li>Execution context (this) of a function</li>
               <li>Augmenting the prototype of an object</li>
+              <li>Asynchronous task execution</li>
             </ol>
           </div>
 
@@ -127,7 +128,11 @@
 
     init(Jasper)
 
-    window.Jasper = (...args) => console.log(Jasper(...args))
+    window.Jasper = new Proxy(Jasper, {
+      apply(fn, context, args) {
+        console.log(fn.apply(context, args))
+      }
+    })
       
     console.log(
       "Level 0: Completed by opening your browser's console.\n" +
