--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width" />
-  <title>Project Jasper</title>
+  <title>Jasper - Javascript Skills Challenge</title>
 
-  <link href="/Jasper/jk-logo.svg" rel="icon" type="image/svg+xml" />
-  <link href="/Jasper/favicon.ico" rel="icon" />
+  <link href="./jk-logo.svg" rel="icon" type="image/svg+xml" />
+  <link href="./favicon.ico" rel="icon" />
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" />
@@ -23,7 +23,7 @@
 
       <div class="row">
         <div class="span8">
-          <p>Jasper provides an API, and engine, to cycle through challenges that will hopefully help identify areas of knowledge or learning opportunities in the user. The challenges are designed to increase in difficulty (or obscurity) as you answer more.</p>
+          <p>Jasper provides an API to cycle through challenges that will hopefully help identify areas of knowledge or learning opportunities in the user. The challenges are designed to increase in difficulty (or obscurity) as you answer more.</p>
 
           <div class="row">
             <div class="span3">
@@ -40,19 +40,10 @@
 
             <div class="span5">
               <h3>This Solution</h3>
+              
               <p>Jasper attempts to fix the above problem by providing a tool for use in various ways. One way to user Jasper is to include it on a website as an easter-egg to be found by developers. People like to find things and most people like a challenge; developers especially will rise to a challenge to prove their skill. Another way to use Jasper is to include it in an interview where a candidate and another person - or two - can work through the challenges presented. By doing "real" work with someone, a better feel for how working with them might actually be once they are hired.</p>
 
-              <h3>Hopes And Dreams</h3>
-
               <p>I think interviews should involve some typical every-day stuff. I think that this would help the candidate relax a little since it should be an activity they are completely comfortable participating in.</p>
-
-              <ul>
-                <li>Code review of some of the candidates' own code</li>
-                <li>Whiteboard some problems (possibly current real problems the company is having)</li>
-                <li>Writing some code</li>
-              </ul>
-
-              <p>To that end, I hope that this library can evolve into a tool that will help us break out of some of that wasted time in an interview. Besides, a lot of questions can be answered indirectly through just working with them rather than them telling a story about their perception of a past event.</p>
             </div>
           </div>
         </div>
@@ -75,20 +66,6 @@
               <li>Asynchronous task execution</li>
             </ol>
           </div>
-
-          <div class="alert alert-info">
-            <h5>Help Out!</h5>
-            <p>Talk about #Jasper, making a suggestion:</p>
-            <ul>
-              <li><a href="http://redd.it/1hdvic">on reddit</a></li>
-              <li><a href="https://news.ycombinator.com/item?id=5986123">on hacker news</a></li>
-              <li><a href="https://github.com/kalisjoshua/Jasper">submit a pull request</a></li>
-              <li><a href="https://github.com/kalisjoshua/Jasper/issues?state=open">file an issue</a></li>
-            </ul>
-          </div>
-
-          <h4>The Name Jasper</h4>
-          <p>The name comes from, JavaScript Activity, Skills Peer Evaluation and Review. It's a stretch I know but the name "Jasper" is what first came to mind and then I tried to create an accronym after-the-fact so leave me alone. If you don't like it, suggest something better.</p>
         </div>
       </div>
 
